# tilc

./: .gitignore  .gitmodules  .mailmap  .taplo.toml  Cargo.toml  rustfmt.toml
.github/: FUNDING.yml
LICENSES/: Apache-2.0.txt  NOTICE_Apache-2.0.txt
compiler/tilc/: Cargo.toml
compiler/tilc/src/: main.rs
compiler/tilc_advanced_lexer/: Cargo.toml
compiler/tilc_advanced_lexer/src/: lib.rs  token_reader.rs
compiler/tilc_arena/: Cargo.toml
compiler/tilc_arena/src/: dropless.rs  lib.rs
compiler/tilc_ast/: Cargo.toml
compiler/tilc_ast/src/: lib.rs  sandyq.rs  token.rs  token_stream.rs  walker.rs
compiler/tilc_ast_lowering/: Cargo.toml
compiler/tilc_ast_lowering/src/: lib.rs
compiler/tilc_backend/: Cargo.toml
compiler/tilc_backend_llvm/: Cargo.toml
compiler/tilc_backend_llvm/src/: lib.rs
compiler/tilc_data_structure/: Cargo.toml
compiler/tilc_data_structure/src/: hash.rs  holder.rs  intern.rs  lib.rs  unhash.rs
compiler/tilc_data_structures/: Cargo.toml
compiler/tilc_data_structures/src/: arena.rs  hash.rs  holder.rs  lib.rs  unhash.rs  unidirectional_vec.rs
compiler/tilc_error/: Cargo.toml
compiler/tilc_error/src/: diagnostic.rs  lib.rs
compiler/tilc_errors/: Cargo.toml
compiler/tilc_errors/src/: diagnostic.rs  lib.rs
compiler/tilc_expand/: Cargo.toml
compiler/tilc_expand/src/: expand.rs  lib.rs  resolver.rs
compiler/tilc_hir/: Cargo.toml
compiler/tilc_hir/src/: def_id.rs  hir.rs  hir_id.rs  lib.rs
compiler/tilc_index/: Cargo.toml
compiler/tilc_index/src/: lib.rs
compiler/tilc_interface/: Cargo.toml
compiler/tilc_interface/src/: compiler.rs  computation.rs  interface.rs  lib.rs  passes.rs  runner.rs  util.rs
compiler/tilc_ir_ty/: Cargo.toml
compiler/tilc_ir_ty/src/: interner.rs  lib.rs  ty_kind.rs
compiler/tilc_lexer/: Cargo.toml
compiler/tilc_lexer/src/: lexer.rs  lib.rs  token.rs
compiler/tilc_llvm/: Cargo.toml
compiler/tilc_log/: Cargo.toml
compiler/tilc_log/src/: lib.rs
compiler/tilc_macro/: Cargo.toml
compiler/tilc_macro/src/: diagnostic.rs  lib.rs  query.rs  symbols.rs  uidx.rs
compiler/tilc_macros/: Cargo.toml
compiler/tilc_macros/src/: lib.rs  queries.rs  symbol.rs  symbols.rs  uidx.rs
compiler/tilc_macros_tests/: Cargo.toml  README.md
compiler/tilc_macros_tests/src/: lib.rs  symbol.rs
compiler/tilc_middle/: Cargo.toml
compiler/tilc_middle/src/: arena.rs  ast.rs  context.rs  keys.rs  lib.rs  passes.rs  query.rs  ty.rs
compiler/tilc_middle/src/query/: cache.rs  keys.rs  query_system.rs  system.rs
compiler/tilc_middle/src/ty/: context.rs  feed.rs
compiler/tilc_parse/: Cargo.toml
compiler/tilc_parse/src/: lib.rs  passes.rs  token_trees.rs
compiler/tilc_parser/: Cargo.toml
compiler/tilc_parser/src/: atrribute.rs  attribute.rs  diagnostics.rs  expr.rs  expression.rs  function.rs  item.rs  lib.rs  parse.rs  parser.rs  path.rs  pattern.rs  statement.rs
compiler/tilc_query_system/: Cargo.toml
compiler/tilc_query_system/src/query/: cache.rs
compiler/tilc_resolver/: Cargo.toml
compiler/tilc_resolver/src/: def_collector.rs  korpe.rs  lib.rs  resolver.rs
compiler/tilc_session/: Cargo.toml
compiler/tilc_session/src/: config.rs  lib.rs  parse.rs  session.rs
compiler/tilc_span/: Cargo.toml
compiler/tilc_span/src/: def_id.rs  edition.rs  file_loader.rs  filename.rs  interner.rs  keyword.rs  keywords.rs  lib.rs  module.rs  pos.rs  session.rs  source_file.rs  source_map.rs  span.rs  symbol.rs
examples/: basty.til
src/: main.rs
