[package]
name = "tilc_interface"
version = "0.1.0"
edition = "2024"

[dependencies]
# Internal crates
tilc_ast = { workspace = true }
tilc_data_structure = { workspace = true }
tilc_error = { workspace = true }
tilc_middle = { workspace = true }
tilc_parse = { workspace = true }
tilc_query_system = { workspace = true }
tilc_resolver = { workspace = true }
tilc_session = { workspace = true }
tilc_span = { workspace = true }
