[package]
name = "tilc_middle"
version = "0.1.0"
edition = "2024"

[dependencies]
# Internal crates
tilc_ast = { workspace = true }
tilc_data_structures = { workspace = true }
tilc_macros = { workspace = true }
tilc_session = { workspace = true }
tilc_span = { workspace = true }

# External packages
parking_lot = { workspace = true }
