[package]
name = "tilc_parse"
version = "0.1.0"
edition = "2024"

[dependencies]
# Internal crates
tilc_advanced_lexer = { workspace = true }
tilc_ast = { workspace = true }
tilc_error = { workspace = true }
tilc_lexer = { workspace = true }
tilc_parser = { workspace = true }
tilc_session = { workspace = true }
tilc_span = { workspace = true }
